deployment/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: __SERVICE_NAME__
spec:
  replicas: 1
  template:
    metadata:
      labels:
        run: __SERVICE_NAME__
    spec:
      containers:
        - name: __SERVICE_NAME__
          image: __IMAGE__
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: 3000
              scheme: HTTP
          ports:
            - containerPort: 3000
