deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: __SERVICE_NAME__
spec:
  ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: 3000
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    run: __SERVICE_NAME__
